# IF_PPlant_GeoStorage

./: .travis.yml  README.md  README.rst  pyproject.toml  run_if.py  setup.py  test.py
coupled_simulation/: __init__.py  coupling.py  geostorage.py  powerplant.py  powerplant_template.py  utilities.py
testdata/RADIAL_CYLINDRICAL_CAES_IF/: testcase.main_ctrl.json
testdata/RADIAL_CYLINDRICAL_CAES_IF/geostorage/: GEOSTORAGE.ptdv  GEOSTORAGE.res_prop  GEOSTORAGE.wells  testcase.geostorage_ctrl.json
testdata/RADIAL_CYLINDRICAL_CAES_IF/powerplant/: testcase.powerplant_ctrl.json
testdata/SYNTH_RADIAL_CAES_IF/: run_IF_PPlant_GeoStorage.bat  scenario.main_ctrl.json
testdata/SYNTH_RADIAL_CAES_IF/powerplant/: scenario.powerplant_ctrl.json
testdata/SYNTH_RADIAL_H2_IF/: input.csv  testcase_hydrogen.main_ctrl.json
testdata/SYNTH_RADIAL_H2_IF/geostorage/: GEOSTORAGE.DATA  testcase_hydrogen.geostorage_ctrl.json
testdata/SYNTH_RADIAL_H2_IF/powerplant/: testcase_hydrogen.powerplant_ctrl.json
testdata/TEST_SCENARIO_ACAES2_PEAK_PV_IF/: testcase.main_ctrl.json  testcase_input.csv
testdata/TEST_SCENARIO_ACAES2_PEAK_PV_IF/geostorage/: GEOSTORAGE.ctrl  GEOSTORAGE.schedule  testcase.geostorage_ctrl.json
testdata/TEST_SCENARIO_ACAES2_PEAK_PV_IF/powerplant/: compression.json  compression_network.json  expansion.json  expansion_network.json  (+1 more)
testdata/scerun_APEN2025_DREC_2050NB/: input.csv  scenario_APEN2025.main_ctrl.json
testdata/testcase_CCS_10MW/: testcase_ccs.main_ctrl.json
testdata/testcase_ECM2021_ACAES2_peak_pv/: input.csv  testcase_ecm2021.main_ctrl.json
(+118 files in other folders)
